--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 aiogram==2.10.1
 aiohttp==3.6.2
 alabaster==0.7.12
+anaconda-client==1.7.2
+anaconda-navigator==1.9.12
+anaconda-project==0.8.3
 argh==0.26.2
 asgiref==3.2.10
 asn1crypto==1.3.0
@@ -36,6 +39,10 @@ cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1594141588948/work
 clyent==1.2.2
 colorama==0.4.3
 comtypes==1.1.7
+conda==4.8.5
+conda-build==3.18.11
+conda-package-handling==1.7.0
+conda-verify==3.4.2
 contextlib2==0.6.0.post1
 cryptography==2.9.2
 cycler==0.10.0
